<resources>
    <string name="app_name">My Application</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Map</string>

    <string name="BATTERY">BATTERY</string>
    <string name="CURRENT">CURRENT</string>
    <string name="SPEED">SPEED</string>
    <string name="TEMPERATURE">TEMPERATURE</string>
    <string name="LIGHTS">LIGHTS</string>

    <string name="front">Front:</string>
    <string name="back">Back:</string>
    <string name="mode">Mode: </string>
    <string name="update">Update</string>
</resources>
