<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/batteryButton"
                android:text="@string/BATTERY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/currentButton"
                android:text="@string/CURRENT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClickCurrent"/>

            <Button
                android:id="@+id/speedButton"
                android:text="@string/SPEED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/temperatureButton"
                android:text="@string/TEMPERATURE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/lightsButton"
                android:text="@string/LIGHTS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </HorizontalScrollView>

    <FrameLayout
        android:id="@+id/Frame_battery"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>
